# AtomixCli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
include/: cliCommand.h  cliConfig.h  cliLog.h  cliPipeline.h
src/: cliCommand.c  cliConfig.c  cliLog.c  cliPipeline.c
